Fix Tool Bar inputs not working, rimplementato applyResize e wireCustomDecoration